[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tracing = "0.1" # 日志和追踪
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6.6"
md-5 = "0.10.5"
walkdir = "2.3.3"